<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_name">Contacts</string>
    <string name="avatar">Avatar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to registration activity -->
    <string name="signup_input_name_hint">Name</string>
    <string name="signup_input_email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Re-enter Password</string>
    <string name="goto_login_activity">Already a member? Login</string>
    <string name="create_account_button">Create Account</string>
</resources>
